# WINIC

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  DEV.md  Makefile  Notes  README.md  assemblyFile.cpp  benchmarkGenerator.cpp  compile_commands.json  customDebug.cpp  customErrors.cpp  experiment.cpp  ldflags  ldflags_new  llvm_instr_gen copy.cpp  llvm_instr_gen.cpp  quick_exec.cpp  setup.sh  templates.cpp
analysis/: Makefile  README.md  analysis.py  analyze_memory.py  cli.py  common_functions.py  compare.py  comparison.py  gen_ref_files.py  globals.py  parsing.py  plotting.py  requirements.txt  setup.py  statistics.py
data/genoa/: genoa.yaml  report_LAT_2025-07-03_11-16-01.txt  report_LAT_genoa.txt  report_TP_genoa.txt
data/neoverse-v2/: gracehopper.yaml  report_LAT_2025-07-11_20-00-42.txt  report_LAT_2025-08-25_10-03-20.txt  report_TP_2025-07-11_19-54-22.txt  report_TP_2025-08-25_09-40-07.txt
data/spacemit_x60/: report_LAT_2025-07-25_12-23-55.txt  report_LAT_2025-08-25_12-04-04.txt  report_TP_2025-07-25_13-23-49.txt  report_TP_2025-08-25_11-53-39.txt  spacemit_x60.yaml
data/zen4/: report_LAT_2025-07-16_20-32-03.txt  report_LAT_2025-07-24_13-03-38.txt  report_LAT_2025-08-25_09-38-40.txt  report_TP_2025-07-04_10-02-10.txt  report_TP_2025-07-17_01-24-34.txt  report_TP_2025-07-24_14-17-49.txt  report_TP_2025-08-25_10-18-39.txt
include/: AssemblyFile.h  BenchmarkGenerator.h  CustomDebug.h  ErrorCode.h  Globals.h  IOSystem.h  LLVMBench.h  LLVMEnvironment.h  Templates.h  WINIC.h
src/: AssemblyFile.cpp  BenchmarkGenerator.cpp  CustomDebug.cpp  ErrorCode.cpp  Globals.cpp  IOSystem.cpp  LLVMBench.cpp  LLVMEnvironment.cpp  Templates.cpp  WINIC.cpp
